<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            style="@style/HomeProfileImages"
            android:contentDescription="@string/profile_images"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_greetings"
            style="@style/HomeGreetingUser"
            android:text="@string/greetings_text"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="@+id/iv_profile" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_suggestion"
            style="@style/HomeSuggestionText"
            android:text="@string/suggestion_text"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_greetings" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top"
            style="@style/HomeTopRecyclerView"
            android:orientation="horizontal"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingBottom="16dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            tools:listitem="@layout/cardview_top"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_popular_movies"
            style="@style/HomeContentTitle"
            android:text="@string/popular_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_top" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            style="@style/HomeContentRecyclerView"
            android:paddingBottom="16dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_movies"
            tools:listitem="@layout/cardview_list" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_popular_tv_shows"
            style="@style/HomeContentTitle"
            android:text="@string/popular_tv_shows"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_popular_movies" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_tv_shows"
            style="@style/HomeContentRecyclerView"
            android:paddingBottom="16dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_popular_tv_shows"
            tools:listitem="@layout/cardview_list" />

        <ProgressBar
            android:id="@+id/progress_bar_top_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/grey"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/rv_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/rv_top"
            app:layout_constraintTop_toBottomOf="@+id/tv_suggestion" />

        <ProgressBar
            android:id="@+id/progress_bar_popular_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/grey"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@id/rv_popular_movies"
            app:layout_constraintStart_toStartOf="@id/rv_popular_movies"
            app:layout_constraintEnd_toEndOf="@id/rv_popular_movies"
            app:layout_constraintBottom_toBottomOf="@id/rv_popular_movies" />

        <ProgressBar
            android:id="@+id/progress_bar_popular_tv_shows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/grey"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintTop_toTopOf="@id/rv_popular_tv_shows"
            app:layout_constraintStart_toStartOf="@id/rv_popular_tv_shows"
            app:layout_constraintEnd_toEndOf="@id/rv_popular_tv_shows"
            app:layout_constraintBottom_toBottomOf="@id/rv_popular_tv_shows" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>